--- a/Navbar/Aboutus/Company/Company.html
+++ b/Navbar/Aboutus/Company/Company.html
@@ -11,8 +11,8 @@
   <div class="meer-company-portfolio">
   
     <div class="meer-company-logo" data-aos="fade-down">
-      <a href="/index.html">
-      <img src="/image/MeerLOGO.png" alt="Company Profile Image" class="meer-company-img">
+      <a href="../../index.html">
+      <img src="../../image/MeerLOGO.png" alt="Company Profile Image" class="meer-company-img">
       </a>
     </div>
   
@@ -41,7 +41,7 @@
 
   <section class="meer-section-founder" data-aos="fade-up">
     <div class="meer-founder-container">
-      <img src="/Cimg/meerm2.png" alt="Founder Image" class="meer-profile-img">
+      <img src="../../Cimg/meerm2.png" alt="Founder Image" class="meer-profile-img">
       <div class="meer-founder-info">
         <h2>Founder: Mr. Syed Muhammad Meer</h2>
         <p>
@@ -52,7 +52,7 @@ As the Founder of Meer Security Services Pvt. Ltd., Mr. Syed Muhammad Meer envis
 
   <section class="meer-section-md" data-aos="fade-up">
     <div class="meer-founder-container">
-      <img src="/Cimg/MerrHamaza.png" alt="Managing Director" class="meer-profile-img">
+      <img src="../../Cimg/MerrHamaza.png" alt="Managing Director" class="meer-profile-img">
       <div class="meer-founder-info">
         <h2>Managing Director: Mr. Syed Hamzah Meer</h2>
         <p>
@@ -62,7 +62,7 @@ As the Founder of Meer Security Services Pvt. Ltd., Mr. Syed Muhammad Meer envis
   </section>
   <section class="meer-section-md" data-aos="fade-up">
     <div class="meer-founder-container">
-      <img src="/Cimg/MerrHamaza.png" alt="Managing Director" class="meer-profile-img">
+      <img src="../../Cimg/MerrHamaza.png" alt="Managing Director" class="meer-profile-img">
       <div class="meer-founder-info">
         <h2>General Manager: Mr. Syed Zyed Meer</h2>
         <p>
@@ -78,26 +78,26 @@ As the Founder of Meer Security Services Pvt. Ltd., Mr. Syed Muhammad Meer envis
     <div class="meer-verify-cards">
   
       <div class="meer-verify-card">
-        <img src="/Cimg/Nadra-logo.png" alt="NADRA" class="meer-verify-img">
+        <img src="../../Cimg/Nadra-logo.png" alt="NADRA" class="meer-verify-img">
         <h3>NADRA Certified</h3>
         <p>Registered with NADRA to ensure identity verification and national compliance for all security personnel.</p>
       </div>
   
       <div class="meer-verify-card">
-        <img src="/Cimg/pvt.png" alt="LLC" class="meer-verify-img">
+        <img src="../../Cimg/pvt.png" alt="LLC" class="meer-verify-img">
         <h3>PVT Registered</h3>
         <p>Registered as a Private Limited Company with SECP Pakistan, ensuring legal credibility, transparency, and strong corporate governance in all our operations.</p>
 
       </div>
   
       <div class="meer-verify-card">
-        <img src="/Cimg/APSAA-Logo.png" alt="APSSA" class="meer-verify-img">
+        <img src="../../Cimg/APSAA-Logo.png" alt="APSSA" class="meer-verify-img">
         <h3>APSSA Member</h3>
         <p>Active member of the All Pakistan Security Services Association (APSSA), ensuring high industry standards.</p>
       </div>
   
       <div class="meer-verify-card">
-        <img src="/Cimg/Pakistan_Army_Emblem.png" alt="Army Verified" class="meer-verify-img">
+        <img src="../../Cimg/Pakistan_Army_Emblem.png" alt="Army Verified" class="meer-verify-img">
         <h3>Army-Approved Training</h3>
         <p>Our staff undergo military-standard training in discipline, defense tactics, and emergency response.</p>
       </div>
