--- a/Navbar/Clints/Clint.html
+++ b/Navbar/Clints/Clint.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guard-Service</title>
 
-    <link rel="stylesheet" href="/Navbar/Clints/Clint.css">
+    <link rel="stylesheet" href="../Clints/Clint.css">
 
 </head>
 <body>
     <header>
         <nav>
-            <a href="/index.html">Home</a>
-            <a href="/Navbar/Clints/Clint.html"class="active">Clint</a>
+            <a href="../../index.html">Home</a>
+            <a href="../Clints/Clint.html"class="active">Clint</a>
             <!-- <a href="/Navbar/Services/SSG.html">SSG</a>
             <a href="/Navbar/Services/Boody-G.html">Body G</a>
             <a href="/Navbar/Services/Scout.html">Scout</a>
@@ -102,5 +102,5 @@
     </div>
 
 
-<script type="module" src="/Navbar/Clints/Clint.js"></script></body>
+<script type="module" src="../Clints/Clint.js"></script></body>
 </html>
