--- a/Navbar/Aboutus/Certificates.html
+++ b/Navbar/Aboutus/Certificates.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Navbar/Aboutus/Certificates.css">
+    <link rel="stylesheet" href="../Aboutus/Certificates.css">
     <title>Responsive Card Layout</title>
 </head>
 <body>
     <!-- Home Button -->
     <div class="homs">
-        <a href="/index.html">
+        <a href="../../index.html">
             <button class="button" onclick="selectButton(this)">
-                <img class="icon" src="/image/MeerLOGO.png" alt="Home">
+                <img class="icon" src="../../image/MeerLOGO.png" alt="Home">
             </button>
         </a>
     </div>
@@ -106,7 +106,7 @@
         </div>
     </div>
 
-    <script src="/Navbar/Aboutus/Certificates.js"></script>
+    <script src="../Aboutus/Certificates.js"></script>
 </body>
 </html>
 
