--- a/Navbar/Services/Guard-Ser.html
+++ b/Navbar/Services/Guard-Ser.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guard-Service</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -39,8 +39,8 @@
             <div class="name">Smart Monitoring</div>
             <div class="des">Dedicated supervisors managing teams to ensure smooth security operations.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -51,8 +51,8 @@
             <div class="name">Professional Protection</div>
             <div class="des">Highly trained guards ensuring safety and security at all times.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -64,8 +64,8 @@
             <div class="name">Elite Trained Guards</div>
             <div class="des">Experienced ex-military personnel delivering unmatched security expertise.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -77,8 +77,8 @@
             <div class="name">High-Risk Security</div>
             <div class="des">Elite SSG-trained commandos specialized in critical protection missions.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -90,8 +90,8 @@
             <div class="name">Advanced Tactical Team</div>
             <div class="des">Highly disciplined SSW professionals for sensitive & high-profile locations.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Boody-G.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Boody-G.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -114,5 +114,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
