--- a/Navbar/Services/Access-Control.html
+++ b/Navbar/Services/Access-Control.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Access Control Gates</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -41,8 +41,8 @@
             <div class="name">Efficient Crowd Management</div>
             <div class="des">Control large crowds and ensure smooth entry operations with fully automated turnstile gates.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Fire-Safety.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Fire-Safety.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -54,8 +54,8 @@
             <div class="name">Advanced Entry Security</div>
             <div class="des">Ensure secure and seamless entry management with our high-tech access control gates.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Fire-Safety.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Fire-Safety.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -67,8 +67,8 @@
             <div class="name">Fingerprint & Face Recognition</div>
             <div class="des">State-of-the-art biometric systems for maximum security at restricted access points.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Fire-Safety.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Fire-Safety.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -80,8 +80,8 @@
             <div class="name">Touchless Entry Control</div>
             <div class="des">Fast and reliable smart card & RFID technology for modern corporate security setups.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Fire-Safety.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Fire-Safety.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -101,5 +101,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
