--- a/Navbar/Services/Boody-G.html
+++ b/Navbar/Services/Boody-G.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal-Body-Guard-Ser</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -40,8 +40,8 @@
     <div class="name">Discreet Security</div>
     <div class="des">Providing high-level safety while maintaining privacy and a low profile.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/Scout.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/Scout.html">Next-Service</a>
     </div>
   </div>
 </div>-->
@@ -53,8 +53,8 @@
     <div class="name">Travel Escort</div>
     <div class="des">Ensuring secure and smooth travel, from VIP transfers to high-risk destinations.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/EventSecurity.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/EventSecurity.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -67,8 +67,8 @@
     <div class="name">Close Protection</div>
     <div class="des">Providing discreet, close-range security to ensure your safety during public appearances, events, and travel.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/EventSecurity.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/EventSecurity.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -80,8 +80,8 @@
     <div class="name">Threat Assessment</div>
     <div class="des">Expert analysis of surroundings to identify potential risks before they become real threats.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/EventSecurity.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/EventSecurity.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -105,7 +105,7 @@
 
 
 
-<script src="../../Services/Guard-Ser.js"></script>
-<!-- <script type="module" src="../../Services/Guard-Ser.j"></script> -->
+<script src="../Services/Guard-Ser.js"></script>
+<!-- <script type="module" src="../Services/Guard-Ser.j"></script> -->
 </body>
 </html>
