--- a/Navbar/Services/CCTV.html
+++ b/Navbar/Services/CCTV.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CCTV Installation & Monitoring</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -39,8 +39,8 @@
             <div class="name">Centralized Operation</div>
             <div class="des">Seamlessly connects CCTV systems with on-ground security operations.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Walkie-Talkie.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Walkie-Talkie.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -51,8 +51,8 @@
         <div class="name">Smart Security Solutions</div>
         <div class="des">Professional CCTV setup with HD cameras and remote monitoring access, enhancing workplace and home security effectively.</div>
         <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Walkie-Talkie.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Walkie-Talkie.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -63,8 +63,8 @@
             <div class="name">24/7 Visual Security</div>
             <div class="des">High-definition cameras ensuring non-stop property surveillance.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Walkie-Talkie.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Walkie-Talkie.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -76,8 +76,8 @@
             <div class="name">Advanced Infrared Tech</div>
             <div class="des">Crystal-clear vision, even in complete darkness, for maximum safety.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Walkie-Talkie.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Walkie-Talkie.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -100,5 +100,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
