--- a/Navbar/Services/EventSecurity.html
+++ b/Navbar/Services/EventSecurity.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event-Security</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -42,8 +42,8 @@
             Our team handles entry control, artist safety, and overall crowd management.
         </div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -57,8 +57,8 @@
             Our guards ensure safety, crowd control, and smooth operations.
         </div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -73,8 +73,8 @@
             Our trained guards manage entry points, guest safety, and event protection.
         </div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -89,8 +89,8 @@
             Our expert team manages crowd control, VIP zones, and ensures players' safety.
         </div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -105,8 +105,8 @@
             highly trained guards, ensuring safety for executives and guests.
         </div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Scout.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Scout.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -127,5 +127,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
