--- a/Navbar/Services/Fire-Safety.html
+++ b/Navbar/Services/Fire-Safety.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fire Alarm & Safety Systems</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -40,8 +40,8 @@
             <div class="name">Complete Fire Protection</div>
             <div class="des">Advanced fire detection, suppression, and prevention solutions to ensure safety and minimize risks.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/FireBook.html">Book Now</a>
-                <a href="../../Services/GPS-Tracking.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/FireBook.html">Book Now</a>
+                <a href="../Services/GPS-Tracking.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -53,8 +53,8 @@
             <div class="name">Instant Threat Detection</div>
             <div class="des">High-quality fire alarm systems with real-time alerts to safeguard lives and property effectively.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/FireBook.html">Book Now</a>
-                <a href="../../Services/GPS-Tracking.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/FireBook.html">Book Now</a>
+                <a href="../Services/GPS-Tracking.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -66,8 +66,8 @@
             <div class="name">Quick Emergency Response</div>
             <div class="des">High-performance extinguishers designed to tackle different fire types with fast and effective action.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/FireBook.html">Book Now</a>
-                <a href="../../Services/GPS-Tracking.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/FireBook.html">Book Now</a>
+                <a href="../Services/GPS-Tracking.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -79,8 +79,8 @@
             <div class="name">Automated Fire Control</div>
             <div class="des">Automatic sprinkler systems for immediate response to fire emergencies, reducing damage effectively.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/FireBook.html">Book Now</a>
-                <a href="../../Services/GPS-Tracking.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/FireBook.html">Book Now</a>
+                <a href="../Services/GPS-Tracking.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -99,5 +99,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
