--- a/Navbar/Services/Metal-Detector.html
+++ b/Navbar/Services/Metal-Detector.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metal Detector Screening</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -39,8 +39,8 @@
             <div class="name">Seamless Security Setup</div>
             <div class="des">Lightweight and accurate devices for quick manual inspection at sensitive checkpoints.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Access-Control.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Access-Control.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -51,8 +51,8 @@
             <div class="name">Compact & Portable</div>
             <div class="des">High-sensitivity detectors designed to identify concealed metallic objects instantly.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Access-Control.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Access-Control.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -64,8 +64,8 @@
             <div class="name">Quick & Efficient Screening</div>
             <div class="des">Ideal for events, offices, and entry points to ensure complete safety control.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Access-Control.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Access-Control.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -77,8 +77,8 @@
             <div class="name">Precise Threat Identification</div>
             <div class="des">Accurately identifies the location of metallic objects for faster screening results.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Access-Control.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Access-Control.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -100,5 +100,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
