--- a/Navbar/Services/Sur-Watch.html
+++ b/Navbar/Services/Sur-Watch.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Surveillance & Monitoring</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -39,8 +39,8 @@
             <div class="name">Centralized Management</div>
             <div class="des">A secure control room handling all surveillance operations seamlessly.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/CCTV.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/CCTV.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -53,8 +53,8 @@
             <div class="name">24/7 Monitoring</div>
             <div class="des">Professional monitoring with real-time alerts and instant response.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/CCTV.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/CCTV.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -66,8 +66,8 @@
             <div class="name">On-Ground & Remote</div>
             <div class="des">Regular patrolling combined with digital monitoring for complete protection.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/CCTV.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/CCTV.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -79,8 +79,8 @@
             <div class="name">AI-Powered Security</div>
             <div class="des">Smart analytics ensure faster detection of suspicious movements.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/CCTV.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/CCTV.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -92,8 +92,8 @@
             <div class="name">Instant Threat Alerts</div>
             <div class="des">Connected smart alarms notify instantly when potential threats occur.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/CCTV.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/CCTV.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -114,5 +114,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
