--- a/Navbar/Services/Vehicle.html
+++ b/Navbar/Services/Vehicle.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle-Service</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -38,8 +38,8 @@
         <div class="name">Armored SUV</div>
         <div class="des">This bulletproof armored SUV is built for tactical operations and VIP transport in extreme conditions. Strong, fast, and completely secure for high-risk missions.</div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Sur-Watch.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Sur-Watch.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -51,8 +51,8 @@
         <div class="name">Land Cruiser V8</div>
         <div class="des">Our bulletproof Land Cruiser V8 offers unmatched comfort and off-road power. Ideal for VIP transport, it combines luxury with military-grade safety to ensure a secure journey in any environment.</div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Sur-Watch.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Sur-Watch.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -62,8 +62,8 @@
         <div class="name">Land Cruiser V8</div>
         <div class="des">Our bulletproof Land Cruiser V8 offers unmatched comfort and off-road power. Ideal for VIP transport, it combines luxury with military-grade safety to ensure a secure journey in any environment.</div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Sur-Watch.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Sur-Watch.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -74,8 +74,8 @@
         <div class="name">Fortuner</div>
         <div class="des">The bulletproof Toyota Fortuner delivers strong road presence with agile handling. Designed for both urban and rural routes, it ensures rapid, safe travel under any threat scenario.</div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Sur-Watch.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Sur-Watch.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -86,8 +86,8 @@
         <div class="name">Vigo</div>
         <div class="des">Our bulletproof Vigo combines speed, durability, and cargo capacity. Perfect for secure transport of personnel or goods in high-risk zones.</div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Sur-Watch.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Sur-Watch.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -98,8 +98,8 @@
         <div class="name">Revo</div>
         <div class="des">The bulletproof Toyota Revo blends modern style with rugged performance. Its reinforced body ensures maximum safety while delivering a smooth ride.</div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Sur-Watch.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Sur-Watch.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -110,8 +110,8 @@
         <div class="name">Mercedes S-Class (VIP)</div>
         <div class="des">Our bulletproof Mercedes S-Class redefines luxury security transport. Designed for high-profile clients, it offers elegance, speed, and unparalleled safety on every trip.</div>
         <div class="btn">
-            <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-            <a href="../../Services/Sur-Watch.html">Next-Service</a>
+            <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+            <a href="../Services/Sur-Watch.html">Next-Service</a>
         </div>
     </div>
 </div>
@@ -132,7 +132,7 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
 
 i have many slides with same heading and pera so i want evry slides have different headings and pera dont change structure of html i have already  css and js only change headings and pera like i have first hd "tittle" security guard second "name" your protectector and third one is pera "des" now i want make every slides have different name and des like protection mode ,safety rules, attack position, block position, and pera may depend on hd means div "name" also dont change tittle every slides have same tittle security guard  do you have any suggestion then first ask me here is html 
