--- a/Navbar/Services/Walkie-Talkie.html
+++ b/Navbar/Services/Walkie-Talkie.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walkie-Talkie Communication</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -39,8 +39,8 @@
             <div class="name">Priority Alerts</div>
             <div class="des">Dedicated emergency channels for rapid response during critical situations.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -51,8 +51,8 @@
             <div class="name">Instant Connectivity</div>
             <div class="des">Stay connected with your team anytime, anywhere using secure two-way radios.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -64,8 +64,8 @@
             <div class="name">Wide Coverage</div>
             <div class="des">High-performance radios that ensure seamless communication over long distances.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -77,8 +77,8 @@
             <div class="name">Crystal-Clear Audio</div>
             <div class="des">Experience noise-free communication with advanced digital radio technology.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -90,8 +90,8 @@
             <div class="name">Effortless Coordination</div>
             <div class="des">Headset-enabled walkie-talkies for smooth, hands-free security operations.</div>
             <div class="btn">
-                <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-                <a href="../../Services/Metal-Detector.html">Next-Service</a>
+                <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+                <a href="../Services/Metal-Detector.html">Next-Service</a>
             </div>
         </div>
     </div>
@@ -113,5 +113,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
