--- a/Navbar/Services/Scout.html
+++ b/Navbar/Services/Scout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scout-Service</title>
 
-    <link rel="stylesheet" href="../../Services/Guard-Ser.css">
+    <link rel="stylesheet" href="../Services/Guard-Ser.css">
 
 </head>
 <body>
@@ -40,8 +40,8 @@
     <div class="name">Perimeter Watch</div>
     <div class="des">Maintaining constant observation to secure boundaries and access points.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -53,8 +53,8 @@
     <div class="name">Recon Patrol</div>
     <div class="des">Early detection of threats through strategic area patrols and surveillance.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -66,8 +66,8 @@
     <div class="name">Risk Mapping</div>
     <div class="des">Charting security vulnerabilities for effective protection planning.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -79,8 +79,8 @@
     <div class="name">Covert Surveillance</div>
     <div class="des">Monitoring without detection to gather critical intelligence on potential threats.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -92,8 +92,8 @@
     <div class="name">Advance Security</div>
     <div class="des">Securing a location before the arrival of VIPs or sensitive equipment.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -105,8 +105,8 @@
     <div class="name">Event Security Prep</div>
     <div class="des">Ensuring every detail of an event venue is secure before guests arrive.</div>
     <div class="btn">
-      <a class="bact" href="../../Services/Booking/GuardBook.html">Book Now</a>
-      <a href="../../Services/Vehicle.html">Next-Service</a>
+      <a class="bact" href="../Services/Booking/GuardBook.html">Book Now</a>
+      <a href="../Services/Vehicle.html">Next-Service</a>
     </div>
   </div>
 </div>
@@ -129,5 +129,5 @@
 
     </div>
 
-<script type="module" src="../../Services/Guard-Ser.js"></script></body>
+<script type="module" src="../Services/Guard-Ser.js"></script></body>
 </html>
